Add tag handling

--- a/Liarodon/Timeline/Timeline.storyboard
+++ b/Liarodon/Timeline/Timeline.storyboard
@@ -195,10 +195,21 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="Qb5-dM-JqW" kind="show" identifier="ShowTimeline" id="eRH-VU-n3T"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RjH-og-a0w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="937.5" y="-2.112676056338028"/>
+        </scene>
+        <!--TimelineViewController-->
+        <scene sceneID="Dv5-Ib-3SR">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Timeline" referencedIdentifier="TimelineViewController" id="Qb5-dM-JqW" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MMd-Sy-YuR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1201" y="546"/>
         </scene>
         <!--Toot-->
         <scene sceneID="U3C-zC-uqe">
@@ -430,11 +441,12 @@
                         <outlet property="bottomConstraint" destination="q1U-8S-QSu" id="mvr-QK-BXG"/>
                         <outlet property="replyTextField" destination="5dI-Se-Cz4" id="bZl-Or-akj"/>
                         <outlet property="tableView" destination="Gkc-Dl-Ug4" id="Xrz-vM-d0z"/>
+                        <segue destination="Qb5-dM-JqW" kind="show" identifier="ShowTimeline" id="IUK-t4-kXd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8GB-y5-mjh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2338" y="509"/>
+            <point key="canvasLocation" x="2273" y="532"/>
         </scene>
         <!--Compose View Controller-->
         <scene sceneID="Ce4-dW-4EZ">
@@ -683,6 +695,7 @@
         <image name="worldwide" width="16" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="IUK-t4-kXd"/>
         <segue reference="pdB-uj-xmp"/>
     </inferredMetricsTieBreakers>
 </document>
