--- a/Liarodon/Timeline/Base.lproj/Timeline.storyboard
+++ b/Liarodon/Timeline/Base.lproj/Timeline.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0ir-iA-oE8">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0ir-iA-oE8">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +14,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="TimelineViewController" id="R3Z-uQ-WeX" customClass="TimelineTableViewController" customModule="Liarodon" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="281" sectionHeaderHeight="28" sectionFooterHeight="28" id="vax-5H-8qa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -229,11 +229,11 @@
                         <viewControllerLayoutGuide type="bottom" id="hxW-pU-U5N"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Rnk-9C-07j">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dLe-Vm-7Y1">
-                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="In reply to @131e55" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5dI-Se-Cz4">
                                         <rect key="frame" x="8" y="7" width="256" height="30"/>
@@ -263,7 +263,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gkc-Dl-Ug4">
-                                <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="372"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Toot" rowHeight="266" id="8td-4G-qEd" customClass="TootTableViewCell" customModule="Liarodon" customModuleProvider="target">
@@ -274,7 +274,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor " translatesAutoresizingMaskIntoConstraints="NO" id="UtW-3j-GxR" customClass="LinkTextView" customModule="Liarodon" customModuleProvider="target">
-                                                    <rect key="frame" x="76" y="59" width="236" height="179"/>
+                                                    <rect key="frame" x="76" y="59" width="396" height="179"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <edgeInsets key="layoutMargins" top="0.0" left="0.0" bottom="0.0" right="0.0"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -300,7 +300,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="800" text="3m" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cqb-Wk-Kr8">
-                                                    <rect key="frame" x="294" y="26" width="18" height="15"/>
+                                                    <rect key="frame" x="454" y="26" width="18" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -364,7 +364,7 @@
                                                     </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T8x-3D-5tl" userLabel="AttachmentView" customClass="AttachmentView" customModule="Liarodon" customModuleProvider="target">
-                                                    <rect key="frame" x="76" y="213" width="236" height="0.0"/>
+                                                    <rect key="frame" x="76" y="213" width="396" height="0.0"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" priority="999" id="m30-Bx-deP"/>
@@ -511,13 +511,12 @@
                                 <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Yl-wE-rtl">
-                                        <rect key="frame" x="299" y="3" width="62" height="38"/>
+                                        <rect key="frame" x="269" y="3" width="92" height="38"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="62" id="5hT-Ad-EPe"/>
                                             <constraint firstAttribute="height" constant="38" id="TP5-E8-7Xk"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                        <state key="normal" title="Toot!"/>
+                                        <state key="normal" title="トゥート!"/>
                                         <connections>
                                             <action selector="tootButtonTapped:" destination="xqC-At-P04" eventType="touchUpInside" id="6ef-eg-plu"/>
                                         </connections>
@@ -547,7 +546,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4kw-km-b4h">
-                                        <rect key="frame" x="260" y="12" width="31" height="21"/>
+                                        <rect key="frame" x="230" y="12" width="31" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -698,11 +697,11 @@
         <image name="boost" width="34" height="30"/>
         <image name="favourite" width="34" height="30"/>
         <image name="more" width="35" height="30"/>
-        <image name="picture-2" width="16" height="16"/>
+        <image name="picture-2" width="170" height="170"/>
         <image name="reply" width="34" height="30"/>
         <image name="tab-home" width="25" height="25"/>
         <image name="user" width="170" height="170"/>
-        <image name="worldwide" width="16" height="16"/>
+        <image name="worldwide" width="170" height="170"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="IUK-t4-kXd"/>
