--- a/Liarodon/Main/Main.storyboard
+++ b/Liarodon/Main/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3z6-JW-vVP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="3z6-JW-vVP">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,7 +21,6 @@
                         <segue destination="Zl7-uH-GHR" kind="relationship" relationship="viewControllers" id="EtJ-iW-uDo"/>
                         <segue destination="4bz-oz-fr4" kind="relationship" relationship="viewControllers" id="kNc-98-nKn"/>
                         <segue destination="EeK-H4-i7k" kind="relationship" relationship="viewControllers" id="NtT-nM-BoU"/>
-                        <segue destination="xUl-60-ZZL" kind="relationship" relationship="viewControllers" id="8TD-GF-OAF"/>
                         <segue destination="XMU-BC-G58" kind="relationship" relationship="viewControllers" id="NO3-he-kdM"/>
                         <segue destination="EmQ-mr-qE2" kind="presentation" identifier="Login" animates="NO" id="zHK-um-KYb"/>
                         <segue destination="vgX-26-BK1" kind="presentation" identifier="SelectAccountNavigationController" id="cP0-cz-mHB"/>
