--- a/Liarodon/Accounts/Base.lproj/Accounts.storyboard
+++ b/Liarodon/Accounts/Base.lproj/Accounts.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="K9l-aw-8Ti">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="K9l-aw-8Ti">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -55,7 +55,7 @@
             </objects>
             <point key="canvasLocation" x="112.8" y="-467.3163418290855"/>
         </scene>
-        <!--Sellect your account-->
+        <!--Select your account-->
         <scene sceneID="qA7-Zh-QNb">
             <objects>
                 <tableViewController id="U7B-fC-44b" customClass="SelectAccountTableViewController" customModule="Liarodon" customModuleProvider="target" sceneMemberID="viewController">
@@ -135,7 +135,7 @@
                             <outlet property="delegate" destination="U7B-fC-44b" id="KE1-jA-PxE"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Sellect your account" id="AxL-TA-1Du">
+                    <navigationItem key="navigationItem" title="Select your account" id="AxL-TA-1Du">
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="duU-xb-irF">
                             <connections>
                                 <action selector="doneButtonTapped:" destination="U7B-fC-44b" id="2Fd-TM-M2N"/>
